# semwebrag

./: .gitignore  DAO.py  DAO_relations.py  README.md  appflask.py  config.ini  countwdt.py  entityLinker.py  eval.html  evalClassic.html  install.py  interface.html  interfaceClassic.html  mainPipeline.py  property_cache.pkl  pyproject.toml  requirements.txt  results.html  save_model.py  serverLauncher.py  transformMedicalData.py  transformMedicalDataFlexible.py  transformMedicalDataTXT.py  visualisations.html  wikidatatest.py  wikidatautils.py
callForTender/: embeddings.index.bak  embeddings.index.labels  embeddings.index.labels.bak  knowledge_graphNoWiki.ttl  logs.json  outputLinker.ttl  outputLinkerLinked_tmp.ttl  pipelineLinkerSOLIHA.py  prompt2.py  public-contracts.ttl  query_enrichie.txt  translate.py  userPrompt.py
callForTender2/: SOLIHAdata.txt  embeddings.index.labels  knowledge_graphNoWiki.ttl  logs.json  outputLinker.ttl  outputLinkerLinked_tmp.ttl  pipelineLinkerSOLIHA.py  prompt2.py  public-contracts-en.ttl  query_enrichie.txt  tmp.py  translatebak.py  userPrompt.py
callForTenderClassic/: allQA.csv  computeAllMetric.py  embeddings.index  embeddings.index.labels  eval.py  getAllQA.py  logs.json  pipelineLinkerMC.py  prompt2.py  query_enrichie.txt  text.txt  userPrompt.py
evaluations/: evaltmp.csv  evaluation_ClassicRAG_medical.csv  evaluation_ancien.csv  evaluation_callForTender_Classic.csv  evaluation_neigbor_no_noise.csv  evaluation_neighbor_noise.csv  evaluation_rdf_Type_medical.csv  evaluation_voisins_medical.csv
finance/: compare.py  eval.py  (+20 more)
(+42 files in other folders)
