[project]
name = "semwebrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.12.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "pip>=25.2",
    "rdflib>=7.1.4",
    "sentence-transformers>=5.1.0",
    "spacy>=3.8.7",
]
